--- a/MyApplicationAdapterList/app/src/main/res/layout/item_list.xml
+++ b/MyApplicationAdapterList/app/src/main/res/layout/item_list.xml
@@ -10,12 +10,11 @@
         android:id="@+id/imageView1"
         android:layout_width="26dp"
         android:layout_height="24dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
-        />
+        app:srcCompat="@android:drawable/btn_star_big_on" />
 
     <TextView
         android:id="@+id/textView"
