--- a/MyApplicationMenuContextual/app/src/main/res/layout/activity_main.xml
+++ b/MyApplicationMenuContextual/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,13 @@
 
 
     <ListView
-        android:layout_width="409dp"
-        android:layout_height="729dp"
         android:id="@+id/list1"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp" />
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
