--- a/TrabajoIApp/app/src/main/res/layout/activity_main.xml
+++ b/TrabajoIApp/app/src/main/res/layout/activity_main.xml
@@ -11,13 +11,13 @@
         android:id="@+id/etAsignatura"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/edit_text_border"
         android:ems="10"
-        android:hint="Ingrese asignatura..."
+        android:hint="@string/editText_hint"
         android:inputType="textPersonName"
+        android:padding="10dp"
         android:textColor="@color/colorText"
         android:textColorHint="@color/colorHint"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,11 +29,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="29dp"
         android:layout_marginTop="32dp"
-        android:text="Agregar"
-        app:layout_constraintStart_toEndOf="@+id/etAsignatura"
         android:background="@drawable/button_bg_rounded_corners"
-        android:textColor="@android:color/white"
+        android:text="@string/button_text"
         android:textAllCaps="false"
+        android:textColor="@android:color/white"
+        app:layout_constraintStart_toEndOf="@+id/etAsignatura"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -41,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Mis asignaturas"
+        android:text="@string/textView_text"
         android:textColor="@color/colorText"
         android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
