--- a/RecyclerAndCardViewApp/app/src/main/res/layout/activity_2.xml
+++ b/RecyclerAndCardViewApp/app/src/main/res/layout/activity_2.xml
@@ -43,4 +43,48 @@
         app:layout_constraintHorizontal_bias="0.258"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleView" />
+    <TextView
+        android:id="@+id/professorView"
+        android:layout_width="349dp"
+        android:layout_height="36dp"
+        android:text="Profesor"
+        android:textSize="18sp"
+        android:textColor="#a9a9a9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.258"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/descriptionView" />
+    <TextView
+        android:id="@+id/dayView"
+        android:layout_width="349dp"
+        android:layout_height="36dp"
+        android:text="Día"
+        android:textSize="18sp"
+        android:textColor="#a9a9a9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.258"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/professorView" />
+    <TextView
+        android:id="@+id/hourView"
+        android:layout_width="349dp"
+        android:layout_height="36dp"
+        android:text="Hora"
+        android:textSize="18sp"
+        android:textColor="#a9a9a9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.258"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dayView" />
+    <TextView
+        android:id="@+id/dateView"
+        android:layout_width="349dp"
+        android:layout_height="36dp"
+        android:text="Fecha entrega próxima tarea"
+        android:textSize="18sp"
+        android:textColor="#a9a9a9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.258"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/hourView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
